--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "barryvdh/laravel-dompdf": "^3.1",
         "inertiajs/inertia-laravel": "^2.0",
         "intervention/image": "^3.11",
         "laravel/breeze": "^2.3",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
+        "mpdf/mpdf": "^8.2",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
