--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     },
     "dependencies": {
         "@inertiajs/inertia": "^0.11.1",
+        "chart.js": "^3.9.1",
         "micromodal": "^0.4.10",
+        "vue-chart-3": "^3.1.8",
         "yubinbango-core2": "^0.6.3"
     }
 }
